# fhir-sdc-tools

./: .gitignore  .mcp.json  .mcpbignore  README.md  manifest.json  pyproject.toml  sdc
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-mcpb.yml  ci.yml
examples/: 2357.json  2357_translated.json  2357_translations.csv  2378  2378_en.csv  2378_translated.json  2378_translations.csv  2389.json  2389_translated.json  2389_translations.csv
skills/calculator-builder/: SKILL.md
skills/sdc-builder/: SKILL.md
skills/sdc-builder/references/: api.md
src/sdc/: __init__.py  cli.py  composition.py  fhirpath.py  guide.py  models.py  questionnaire-app.html  server.py  transforms.py
tests/: conftest.py  test_cli.py  test_composition.py  test_fhirpath.py  test_models.py  test_transforms.py
