[project]
name = "fhir-sdc"
version = "0.1.0"
description = "Composable Python library and CLI for building FHIR SDC Questionnaires"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Axel Van Raes" },
]
keywords = ["fhir", "sdc", "questionnaire", "healthcare", "hl7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
sdc = "sdc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
