[project]
name = "fhir-sdc-tools"
version = "0.4.1"
description = "Composable Python library and CLI for building FHIR SDC Questionnaires"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Axel Van Raes" },
]
keywords = ["fhir", "sdc", "questionnaire", "healthcare", "hl7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Tiro-health/fhir-sdc-tools"
Repository = "https://github.com/Tiro-health/fhir-sdc-tools"
Issues = "https://github.com/Tiro-health/fhir-sdc-tools/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.26.0"]

[project.scripts]
sdc = "sdc.cli:cli"
fhir-sdc-mcp = "sdc.server:main [mcp]"

[project.urls]
"Bug Tracker" = "https://github.com/Tiro-health/fhir-sdc-tools/issues"
"Source" = "https://github.com/Tiro-health/fhir-sdc-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc"]

[tool.hatch.build.targets.wheel.force-include]
"src/sdc/questionnaire-app.html" = "sdc/questionnaire-app.html"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
